log
Fri 19 Aug 2022 12:37:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fab9344
Fri 19 Aug 2022 12:40:46 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:3: error: ‘x’ undeclared (first use in this function)
   37 |   x = list.head;
      |   ^
list.c:37:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:11: error: ‘list’ is a pointer; did you mean to use ‘->’?
   37 |   x = list.head;
      |           ^
      |           ->
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c6843a3
